fix svg alignment

--- a/src/components/Engagements/Types/styles.module.scss
+++ b/src/components/Engagements/Types/styles.module.scss
@@ -115,7 +115,6 @@ $breakpoints: (
     }
     & svg {
       align-self: center;
-      margin-top: 6px;
     }
 }
 
